versions/11.4.4/stencil/components/list/readme.md
# limel-list



<!-- Auto Generated Below -->


## Properties

| Property     | Attribute     | Description                                                    | Type                            |
| ------------ | ------------- | -------------------------------------------------------------- | ------------------------------- |
| `badgeIcons` | `badge-icons` | True if the list should display larger icons with a background | `boolean`                       |
| `items`      | --            | List of items to display                                       | `(ListItem \| ListSeparator)[]` |
| `selectable` | `selectable`  | True if the items in the list should be selectable/clickable   | `boolean`                       |


## Events

| Event    | Detail | Description                                                                                     |
| -------- | ------ | ----------------------------------------------------------------------------------------------- |
| `change` |        | Fired when a new value has been selected from the list. Only fired if selectable is set to true |


----------------------------------------------

*Built with [StencilJS](https://stenciljs.com/)*
